<resources>
    <string name="app_name">Book Meeting PBRU</string>

    <string name="singup">สมัครสมาชิค</string>
    <string name="name">ชื่อ</string>
    <string name="surname">นามสกุล</string>
    <string name="idcard">รหัสบัตรบัตร</string>
    <string name="office">บุคลากรภายใน</string>
    <string name="outoffice">บุคลากรภายนอก</string>

    <string name="beforenoon">8:00 - 12:00</string>
    <string name="afternoon">13:00 - 16:30</string>
    <string name="fullday">8:00 - 16:30</string>
    <string name="text1">เลือกจำนวนวัน</string>
    <string name="text2">เลือกเวลาที่ใช้</string>



</resources>
